--- a/scripts/install.txt
+++ b/scripts/install.txt
@@ -1,7 +1,10 @@
 #!/usr/bin/env bash
+
 # GNU Stow format XDG except .zshrc & .bashrc
 
 set -euo pipefail 
+
+rm -rf $HOME/.zshrc
 
 # Check bash or zsh 
 if [ -n "$BASH_VERSION" ]; then
